Add JWT and connection string settings to config

--- a/TechnicalTest.API/appsettings.Development.json
+++ b/TechnicalTest.API/appsettings.Development.json
@@ -1,8 +1,17 @@
 {
+  "Jwt": {
+    "Key": "MinhaChaveSuperSecreta1234567890",
+    "Issuer": "MeuIssuer",
+    "Audience": "MeuAudience"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=technicaltest;Username=postgres;Password=postgres"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
