Add JWT and connection string settings

--- a/TechnicalTest.API/appsettings.json
+++ b/TechnicalTest.API/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "Jwt": {
+    "Key": "MinhaChaveSuperSecreta1234567890",
+    "Issuer": "MeuIssuer",
+    "Audience": "MeuAudience"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=technicaltest;Username=postgres;Password=postgres"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
